--- a/term1week6.ipynb
+++ b/term1week6.ipynb
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2630,8 +2630,7 @@
      "text": [
       "The quick brown fox jumps over the lazy dog\n",
       "the quick brown fox jumps over the lazy dog\n",
-      "['the', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dog']\n",
-      "brown, dog, fox, jumps, lazy, over, quick, the, the\n"
+      "['the', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dog']\n"
      ]
     }
    ],
@@ -2643,14 +2642,14 @@
     "sstring1 = lstring1.split(\" \")\n",
     "print(sstring1)\n",
     "sstring1.sort()\n",
-    "jstring1 = \", \".join(sstring1)\n",
-    "print(jstring1)\n",
+    "string3 = \", \".join(sstring1)\n",
+    "\n",
     "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2668,14 +2667,10 @@
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8532\\3118832643.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 1 Mark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring3\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mquestion3_c\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test case passed!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
      ]
     }
    ],
