--- a/term1week6.ipynb
+++ b/term1week6.ipynb
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2716,17 +2716,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The quick brown fox jumps over the lazy cat\n"
+     ]
+    }
+   ],
    "source": [
-    "string4 = # (delete, and insert code here)\n",
-    "\n",
+    "string4 = string1.replace('dog', 'cat')\n",
     "print(string4)\n",
     "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2742,7 +2749,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "assert(string4 == question3_d())\n",
@@ -2771,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2785,17 +2800,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The quick brown dog jumps over the lazy fox\n"
+     ]
+    }
+   ],
    "source": [
-    "string5 = # (delete, and insert code here)\n",
-    "\n",
+    "string5 = string1.replace(\"fox\", \"1\")\n",
+    "string5 = string5.replace(\"dog\", \"fox\")\n",
+    "string5 = string5.replace(\"1\", \"dog\")\n",
     "print(string5)\n",
     "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2811,7 +2835,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "assert(string5 == question3_e())\n",
@@ -2842,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2857,7 +2889,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The regular solid known as the tetrahedron has 4 triangular faces, 6 edges and 4 vertices.\n"
+     ]
+    }
+   ],
    "source": [
     "polyhedron_template = 'The regular solid known as the {} has {} {} faces, {} edges and {} vertices.'\n",
     "\n",
@@ -2888,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2902,19 +2942,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The regular solid known as the cube has 6 square faces, 12 edges and 8 vertices.\n",
+      "The regular solid known as the octahedron has 8 triangular faces, 12 edges and 6 vertices.\n"
+     ]
+    }
+   ],
    "source": [
-    "polyhedron2 = # (delete, and insert code here)\n",
-    "polyhedron3 = # (delete, and insert code here)\n",
+    "polyhedron2 = polyhedron_template.format('cube', 6, 'square', 12, 8)\n",
+    "polyhedron3 = polyhedron_template.format('octahedron', 8, 'triangular', 12, 6)\n",
     "print(polyhedron2)\n",
-    "print(polyhedron3)\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(polyhedron3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2930,7 +2977,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 tests passed!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2 Marks\n",
     "# Do not try to delete this cell\n",
@@ -2965,7 +3030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2979,17 +3044,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The regular solid known as the cube has 6 square faces, 12 edges and 8 vertices.'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "polyhedron_template2 = # (delete, and insert code here)\n",
+    "polyhedron_template2 = 'The regular solid known as the {4} has {2} {3} faces, {1} edges and {0} vertices.'\n",
     "polyhedron_template2.format(8,12,6,'square','cube')\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3005,7 +3081,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "assert(polyhedron_template2.format(8,12,6,'square','cube') == question4i_b())\n",
@@ -3039,7 +3123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3053,18 +3137,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "Replacement index 4 out of range for positional args tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8532\\1257492563.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcube_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'square'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'cube'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpolyhedron_template3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'The regular solid known as the {4} has {2} {3} faces, {1} edges and {0} vertices.'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mpolyhedron_template3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcube_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: Replacement index 4 out of range for positional args tuple"
+     ]
+    }
+   ],
    "source": [
-    "polyhedron_template3 = # (delete, and insert code here)\n",
     "cube_data = [8, 12, 6, 'square', 'cube']\n",
-    "polyhedron_template3.format(cube_data)\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "polyhedron_template3 = 'The regular solid known as the {4} has {2} {3} faces, {1} edges and {0} vertices.'\n",
+    "polyhedron_template3.format(cube_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3080,7 +3174,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'cube_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8532\\3000895167.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 1 Mark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcube_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'square'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'cube'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32massert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpolyhedron_template3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcube_data\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mquestion4i_c\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test case passed!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'cube_data'"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "cube_data = [8, 12, 6, 'square', 'cube']\n",
@@ -3120,7 +3226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3134,17 +3240,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The roots of x^2 - 34 x + 168 = 0 are x = 28 and x = 6\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "quad_string_a_template = 'The roots of x^2 - {2} x + {3} = 0 are x = {0} and x = {1}'\n",
+    "int1 = random.randint(2,30)\n",
+    "int2 = random.randint(2,30)\n",
+    "int3 = int1+int2\n",
+    "int4 = int1*int2\n",
+    "\n",
+    "quad_string_a = quad_string_a_template.format(int1, int2,  int3, int4)\n",
     "\n",
     "print(quad_string_a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3160,7 +3283,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "# Do not try to delete this cell\n",
@@ -3191,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3205,17 +3346,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The roots of x^2 - 39 x + 308 = 0 are x = 11 and x = 28\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "a = random.randint(2,30)\n",
+    "b = random.randint(2,30)\n",
+    "quad_string_b = f'The roots of x^2 - {a+b} x + {a*b} = 0 are x = {a} and x = {b}'\n",
+    "\n",
     "\n",
     "print(quad_string_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3231,7 +3384,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "# Do not try to delete this cell\n",
